js underline and hide

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <h1 class="welcome-text">WE LIVE AND BREATHE CODE.</h1>
         <p class="welcome-text">We're a small team of developers, designers, and marketing ninjas, who are passionate about creating great products.  We are here to help you build the products and tools of the future.</p>
         <div class="button">MEET THE TEAM</div>
-        <img src="assets/team.png" alt="team-photo" class="welcome-text">
+        <img id="showHide" src="assets/team.png" alt="team-photo" class="welcome-text">
       </section>
       <section class="about-section">
         <div class="what-we-do">
